# pdfmanip

./: .gitignore  Makefile  Pipfile  README.md  build.py  caller.sh  pdfmanip.py  pyproject.toml
