[project]
name = "pdfmanip"
version = "0.1.0"
description = "Manipulate PDF files (e.g. remove given pages)"
authors = ["Jabba Laci <jabba.laci@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pikepdf>=9.7.0",
    "pyrsistent>=0.20.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
